# AeroNyx-Ed25519

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh
scripts/: optimize_deploy.sh
src/: auth.rs  client.rs  client_example.rs  config.rs  crypto.rs  hardware.rs  lib.rs  main.rs  network.rs  network_monitor.rs  network_optimizations.rs  obfuscation.rs  performance_monitor.rs  registration.rs  remote_command_handler.rs  remote_management.rs  security_optimizations.rs  server.rs  setup.rs  terminal_manager.rs  types.rs  utils.rs  websocket_protocol.rs
src/auth/: acl.rs  challenge.rs  manager.rs  mod.rs
src/config/: constants.rs  defaults.rs  mod.rs  settings.rs
src/crypto/: e2e.rs  encryption.rs  flexible_encryption.rs  keys.rs  mod.rs  session.rs
src/erminal/: mod.rs
src/network/: ip_pool.rs  mod.rs  monitor.rs  tun.rs
src/protocol/: mod.rs  serialization.rs  types.rs  validation.rs
src/registration/: hardware_verification.rs  metrics.rs  mod.rs  tests.rs  types.rs  websocket.rs
src/registration/websocket/: connection.rs  handlers.rs  terminal.rs
src/remote_command_handler/: config.rs  models.rs  validation.rs
src/remote_command_handler/handlers/: archive_ops.rs  batch_ops.rs  common.rs  dir_ops.rs  execute_ops.rs  file_ops.rs  mod.rs  system_ops.rs
src/remote_command_handler/utils/: logging.rs  mod.rs
src/server/: client.rs  connection.rs  core.rs  globals.rs  metrics.rs  mod.rs  packet.rs  routing.rs  session.rs
src/services/remote/: RemoteCommandService.js
src/terminal/: mod.rs
src/utils/: logging.rs  mod.rs  security.rs  system.rs
src/utils/remote/: constants.js  encoding.js
src/zkp/: circuit.rs  mod.rs  prover.rs  verifier.rs
src/zkp_halo2/: circuit.rs  commitment.rs  hardware_circuit.rs  mod.rs  poseidon_hasher.rs  prover.rs  tests.rs  types.rs  verifier.rs
