[package]
name = "AeroNyx-Private-Ed25519"
version = "0.1.0"
edition = "2021"
authors = ["hi@aeronyx.network"]
description = "A private server using Solana keypairs for authentication and encryption"

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"

# WebSockets
tokio-tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"] }

# Networking
tun = { version = "0.5", features = ["async"] }
socket2 = "0.5"

# Cryptography
solana-sdk = "=1.14.18"
ed25519-dalek = "1.0"
x25519-dalek = "1.2"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
hmac = "0.12"
chacha20poly1305 = "0.9"
curve25519-dalek = "3.2"
hkdf = "0.12"

# TLS and certificates
rustls = "0.20"
rustls-pemfile = "1.0"
tokio-rustls = "0.23"
rustls-native-certs = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
clap = { version = "4.3", features = ["derive", "cargo"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
tempfile = "3.3"

# IP address handling
ipnetwork = "0.20"

# Unix-specific
nix = { version = "0.26", features = ["user"] }

# Setup utilities
dialoguer = "0.10"
indicatif = "0.17"
console = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }

# Examples
tokio-util = { version = "0.7", features = ["codec"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", features = ["user"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[features]
default = []
setup = []

[[bin]]
name = "aeronyx-private-ed25519"
path = "src/main.rs"

[[example]]
name = "client_example"
path = "examples/client_example.rs"
