[package]
name = "AeroNyx-Private-Ed25519"
version = "0.1.0"
edition = "2021"
authors = ["hi@aeronyx.network"]
description = "A private server using Solana keypairs for authentication and encryption"
repository = "https://github.com/aeronyx/private-ed25519"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["vpn", "ed25519", "solana", "privacy", "security"]
categories = ["networking", "cryptography"]

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
aes-gcm = "0.10.3"
base64 = "0.13"
generic-array = "0.14.7"  # Added this line for AES-GCM support
# WebSockets
tokio-tungstenite = { version = "0.19", features = ["rustls-tls-webpki-roots"] }
# Networking
tun = { version = "0.5", features = ["async"] }
socket2 = "0.5"
# Use tracing-appender v0.2.x compatible with tracing-subscriber v0.3.x
tracing-appender = "0.2.2"
webpki = "0.22"
# Cryptography
solana-sdk = "=1.14.18"
ed25519-dalek = "1.0"
x25519-dalek = "1.2"
rand = "0.8"
chrono = "0.4"
sha2 = "0.10"
hex = "0.4"
aes = "0.8"
cbc = { version = "0.1", features = ["std"] }
hmac = "0.12"
chacha20poly1305 = "0.9"
curve25519-dalek = "3.2"
hkdf = "0.12"
# TLS and certificates
rustls = "0.20"
rustls-pemfile = "1.0"
tokio-rustls = "0.23"
rustls-native-certs = "0.6"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Utilities
clap = { version = "4.3", features = ["derive", "cargo"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
# Ensure necessary features are enabled for tracing-subscriber
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
tempfile = "3.3"
once_cell = "1.17"
parking_lot = "0.12"
# IP address handling
ipnetwork = "0.20"
# Metrics and monitoring
metrics = { version = "0.20", optional = true }
metrics-exporter-prometheus = { version = "0.11", optional = true }
# Unix-specific
nix = { version = "0.26", features = ["user"] }
# Setup utilities
dialoguer = "0.10"
indicatif = "0.17"
console = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
# Examples and code utilities
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.4"
crossbeam-channel = "0.5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", features = ["user"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[dev-dependencies]
criterion = "0.4"
tokio-test = "0.4"
test-case = "3.1"
quickcheck = "1.0"
mockall = "0.11"

[features]
default = []
setup = []
metrics = ["dep:metrics", "metrics-exporter-prometheus"]
admin-api = []
advanced-obfuscation = []
multi-routing = []
prometheus = ["metrics-exporter-prometheus"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
debug = false

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[[bin]]
name = "aeronyx-private-ed25519"
path = "src/main.rs"
