[package]
name = "AeroNyx-Private-Ed25519"
version = "0.1.0"
edition = "2021"
authors = ["hi@aeronyx.network"]
description = "A private server using Solana keypairs for authentication and encryption"
repository = "https://github.com/aeronyx/private-ed25519"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["vpn", "ed25519", "solana", "privacy", "security"]
categories = ["networking", "cryptography"]

[dependencies]
# Async runtime
tokio = { version = "1.28", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Networking
tun = { version = "0.5", features = ["async"] }
socket2 = "0.5"
ipnetwork = "0.20"
pnet = "0.34"

# WebSockets
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-webpki-roots"] }

# HTTP Client
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }

# Cryptography - Core
solana-sdk = "1.17"
ed25519-dalek = "1.0"
x25519-dalek = "1.2"
curve25519-dalek = "3.2"
rand = "0.8"
rand_core = "0.6"
sha2 = "0.10"
hex = "0.4"
blake2b_simd = "1.0"

# Cryptography - Encryption
aes = "0.8"
aes-gcm = "0.10.3"
cbc = { version = "0.1", features = ["std"] }
chacha20poly1305 = "0.9"
hmac = "0.12"
hkdf = "0.12"

# Halo2 ZKP
halo2_proofs = "0.3.0"
halo2_gadgets = "0.3.0"
ff = "0.13"
group = "0.13"
pasta_curves = "0.5"

# TLS and certificates
rustls = "0.20"
rustls-pemfile = "1.0"
tokio-rustls = "0.23"
rustls-native-certs = "0.6"
webpki = "0.22"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11"
bincode = "1.3"
base64 = "0.13"

# System Information
sys-info = "0.9.1"
gethostname = "0.4.1"

# Logging and Tracing
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "std"] }
tracing-appender = "0.2.2"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# CLI and Setup
clap = { version = "4.3", features = ["derive", "cargo"] }
dialoguer = "0.10"
indicatif = "0.17"
console = "0.15"

# Utilities
chrono = "0.4"
once_cell = "1.17"
parking_lot = "0.12"
crossbeam-channel = "0.5"
bytes = "1.4"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
tempfile = "3.3"
flate2 = "1.0"
generic-array = "0.14.7"

# Numeric
num-bigint = "0.4"
num-traits = "0.2"

# Metrics and monitoring (optional)
metrics = { version = "0.20", optional = true }
metrics-exporter-prometheus = { version = "0.11", optional = true }

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.26", features = ["user"] }

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "shellapi"] }

[dev-dependencies]
criterion = "0.4"
tokio-test = "0.4"
test-case = "3.1"
quickcheck = "1.0"
mockall = "0.11"

[features]
default = ["zkp"]
zkp = []
setup = []
metrics = ["dep:metrics", "metrics-exporter-prometheus"]
admin-api = []
advanced-obfuscation = []
multi-routing = []
prometheus = ["metrics-exporter-prometheus"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
debug = false

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 0
debug = true

[[bin]]
name = "aeronyx-private-ed25519"
path = "src/main.rs"
